# MeshCat

./: README.md  pyproject.toml
.github/workflows/: main.yml
meshcat/: client.py  client.yaml  devices.json  flash.py  main.py  server.py  socat.py  utils.py
